Fixing the problem with gitignore

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,7 @@
     },
     "BrevoSettings": {
         "SenderName": "Best Store",
-        "SenderEmail": "admin@beststore.com"
+        "SenderEmail": "admin@beststore.com" 
     }
 }
+//Testing
